--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBD SAY</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <div id="output"></div>
-    <i class="fa-solid fa-heart" id="love"></i>
-    <script src="script.js"></script>
+    <body>
+        <body>
+            <input type="submit" onclick="toggleLamp()" value="Hidupkan lampu" class="lampu">
+            <input type="submit" onclick="playMusic()" value="Mainkan musik" class="musik hidden">
+            <input type="submit" onclick="startMainEvent()" value="Ke acara inti" class="acara hidden">
+            
+        </body>
+        <script src="script.js"></script>
+    </body>
 </body>
 </html>
