--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HBD SAY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <body>
-        <body>
-            <input type="submit" onclick="toggleLamp()" value="Hidupkan lampu" class="lampu">
-            <input type="submit" onclick="playMusic()" value="Mainkan musik" class="musik hidden">
-            <input type="submit" onclick="startMainEvent()" value="Ke acara inti" class="acara hidden">
-            
-        </body>
-        <script src="script.js"></script>
-    </body>
+    <input type="submit" onclick="toggleLamp()" value="Hidupkan lampu" class="lampu">
+    <input type="submit" onclick="playMusic()" value="putar musik" class="musik hidden">
+    <input type="submit" onclick="startMainEvent()" value="pencet lagi hehe" class="acara hidden">
+    <div class="container center hidden">
+        <div class="cake">
+            <div class="candle"></div>
+            <div class="top-layer"></div>
+            <div class="middle-layer"></div>
+            <div class="bottom-layer"></div>
+          </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
